app/assets/stylesheets/scrapers.css.scss
// Place all the styles related to the scrapers controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.table-responsive.scraper-data {
  table {
    white-space: nowrap;
    td, th {
      max-width: 200px;
      overflow: hidden;
    }
  }
  overflow-x: scroll;
  -webkit-mask: -webkit-linear-gradient(
      left,
      rgba(255,255,255,1) 95%,
      rgba(255,255,255,0)
    );
}

.popover-content {
  word-wrap: break-word;
}

span.stderr {
  color: #e00;
}

span.internal {
  color: #a00;
}

.icon-box {
  width: 15px;
  height: 15px;
}

.pulse {
  vertical-align: middle;
  width: 1em;
  height: 1em;
  background-color: #333;
  display: inline-block;
  border-radius: 100%;  
  -webkit-animation: scaleout 1.0s infinite ease-in-out;
  animation: scaleout 1.0s infinite ease-in-out;
}

@-webkit-keyframes scaleout {
  0% { -webkit-transform: scale(0.0) }
  100% {
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

@keyframes scaleout {
  0% { 
    transform: scale(0.0);
    -webkit-transform: scale(0.0);
  } 100% {
    transform: scale(1.0);
    -webkit-transform: scale(1.0);
    opacity: 0;
  }
}

.panel.panel-danger {
  margin-top: 5em;
}

#console_title:after {
    font-family: 'FontAwesome';
    content: "(hide)";
}
#console_title.collapsed:after {
    content: "(show)";
}

pre {
  max-height: 15em;
  overflow-y: scroll;
}

